Structure for index page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello world!
-author: Author name
+title: Hendy Tanata
+author: Hendy Tanata
 url: http://example.com
-email: mail@example.com
+email: htanata@gmail.com
