Update _config.yml with the right information.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Hendy Tanata
 author: Hendy Tanata
-url: http://example.com
-email: htanata@gmail.com
+url: http://hendytanata.com
+email: hendy@tanata.net
